Upgrade to Elasticsearch 7.x (#478)
* [index] bump version to Elasticsearch 7.5.2
* [index] fix tokenizer/analyzer compile errors
* [index] use indices level when fetching cluster health
* [index] fix EsNode initialization
* [index] fix client compile errors
* Fix type and other warnings printed by ES API.
* [index] add CMS GC config to index tests
* Fixes [parent] data too large issues during tests.
* [rf2] reduce RF2 exporter scroll timeout to 1m
* [tests] fix negative scores in SortIndexTest
* [api] remove scrollId and scrollKeepAlive from Java API
* Use searchAfter + branch@timestamp for efficient data snapshot paging/scrolling.
* [core] remove scrollId from core models and API
* [snomed] remove scrollId from snomed models and API
* [rest] remove scrollId from core REST API
* [snomed] remove scrollId from snomed REST API
* [rf2] use branch@timestamp for RF2 exports
* [build] add CMS GC settings to all tycho surefire executions
* [launch] add CMS GC settings to all test launch configs
* [qa] fix lgtm issues https://lgtm.com/rules/2049510531/
* [index] use bool query with should clauses for term filters with more than the configured index.max_terms_count.
* Also make it possible to configure both maxTermsCount and resultWindow values from snowowl.yml (repository.index config).
* [index] fix some of the type_removal warnings reported by ES
* The remaining warnings thrown by the Mapping API, but we cannot remove it yet, due to our dependency to the TCP client infrastructure. Those warnings will be eliminated once ES 8 is out and we decide to upgrade to that (which will remove the TCP client functionality entirely).
Fix some java compile warnings as well. And also add some serialVersionUIDs.
* [index] fix nested field name in terms queries. Also fix decimal value conversion when number of terms is less than the
max_terms_count.
* [index] searches should always track total hits accurately
* [core] update comments in SearchResourceRequestIte